--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+# Ignore signing keys for OpenID Connect.
+/config/*.pem
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
